test [PRIV-45]: add services.test.ts and added test for model Service.test.ts fix [PRIV-45]: fixed parameter request for services endpoint updated openapi.yaml [develop] refactoring put method in manage [develop]
