# backend/src/routes/user/Services.ts
@@ -1,27 +1,24 @@
 import Route from "../../Route";
 import { Request, Response } from "express";
-import { badRequest, internalServerError, success } from "../../helper/http";
+import {  internalServerError, success } from "../../helper/http";
 import Service from "../../model/Service";
+
 
 export default class ServicesRoute extends Route {
     constructor() {
-        super("services", true);
+        super("services", false);
     }
 
     protected async httpGet(request: Request, response: Response): Promise<void> {
-        let itemsPerPage = request.body.items;
-        let page = request.body.page;
-        try {
-            itemsPerPage = Number.parseInt(itemsPerPage);
-            page = Number.parseInt(page);
-        } catch (e) {
-            badRequest(response);
-            return;
-        }
-        try {
-            const services = await Service.findServices(itemsPerPage, page);
-            success(response, new Object({ "services": services }));
-        } catch (e) {
+        const itemsPerPageS = request.query.items;
+        const pageS = request.query.page;
+        const itemsPerPageN = itemsPerPageS === undefined ? undefined : Number.parseInt(itemsPerPageS.toString());
+        const pageN = pageS === undefined ? undefined : Number.parseInt(pageS.toString());
+
+        const services = await Service.findServices(itemsPerPageN, pageN);
+        if (services!=null) {
+            success(response,services);
+        }else{
             internalServerError(response);
         }
     }
